Fri Mar 28 17:18:50 UTC 2008  Steve Huston  <shuston@riverace.com>

        * ace/CDR_Stream.cpp (write_long_placeholder, write_short_placeholder):
          Be careful to adjust and grow the stream's block before taking
          the pointer that's returned to the user. Thanks to Alain Kocelniak
          <alain@corys.fr> for this fix.

        * ace/CDR_Stream.h: Note that the placeholder methods return 0 if
          the method fails due to insufficient memory.

        * THANKS: Added Alain Kocelniak to the Hall of Fame.

Fri Mar 28 15:40:03 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/unload_libace.mpb:

          Inhert from vc_warnings instead of duplicating part of it's
          functionality.

Fri Mar 28 09:24:25 UTC 2008  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_orb_tests.lst:

          Enabled a test to Bug_3276_Regression.

Fri Mar 28 09:17:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Reactor_Dispatch_Order_Test.cpp:
          Extended this test to also test suspend/resume_handlers and the
          dev_poll reactor. Thanks to Russell Morra for extending this test

        * ace/ACE.cpp:
        * ace/High_Res_Timer.inl:
          Layout changes

        * ace/Hash_Map_Manager_T.cpp:
          Use prefix increment instead of postfix

        * ace/High_Res_Timer.h:
        * ace/Reactor.h:
        * ace/Select_Reactor_Base.h:
          Doxygen changes

        * ace/Select_Reactor_Base.inl:
          Fixed done implementation. This fixes bugzilla 3267

        * ace/String_Base.cpp:
          Initialise pointer with 0

        * ace/WFMO_Reactor.{h,cpp,inl}:
          Bool changes, fixed implementation of suspend_handlers/resume_handlers,
          the to_be_added set modifications where not done correctly

Thu Mar 27 19:09:57 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst: